packages/filter-list/src/FilterListItem/filter-list-item.pcss
.sds-filter-list-item {
  --filter-list-item-background-color: transparent;

  align-items: center;
  background: var(--filter-list-item-background-color);
  border-radius: var(--sds-space-border-radius-small);
  display: flex;
  flex-direction: row;
  gap: var(--sds-space-gap-tiny);
  justify-content: space-between;
  padding-right: var(--sds-space-padding-small);
  width: 100%;

  &:has(&__input:hover) {
    --filter-list-item-background-color: var(
      --sds-color-interaction-neutral-transparent-highlight
    );
  }

  &__input {
    flex-basis: 100%;

    &-label {
      display: flex;
      gap: var(--sds-space-padding-tiny);
    }
  }
}

